# pich8

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  build.rs  gen_notice.py  gen_notices.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
data/bootrom/: pich8-logo.8o  pich8-logo.ch8
data/debugrom/: debug_example.8o
data/roms/: pich8-invalid-opcode.ch8
src/: contracts.rs  dialog_handler.rs  display.rs  emulator.rs  file_dialog_handler.rs  fps_counter.rs  gui.rs  main.rs  preset_handler.rs  rom_downloader.rs  sound.rs  util.rs  video_memory.rs
src/cpu/: mod.rs  opcodes.rs  test.rs
src/gui/: color_presets.rs  color_settings.rs  mod.rs  quirks_presets.rs  quirks_settings.rs
