[package]
name = "pich8"
version = "1.0.1"
description = "A cross-platform CHIP-8, SUPER-CHIP and XO-CHIP interpreter and debugger written in Rust"
authors = ["Philipp W <phil.w07@gmail.com>"]
edition = "2018"
build = "build.rs"
license = "MIT"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dependencies]
rand = "0.8.4"
serde = { version = "1.0.135", features = ["derive"] }
rmp-serde = "1.0.0"
glium = "0.30.2"
imgui = "0.8.2"
imgui-glium-renderer = "0.8.2"
imgui-winit-support = "0.8.2"
tinyfiledialogs = "3.9.0"
rodio = "0.14.0"
getopts = "0.2.21"
url = { version = "2.2.2", optional = true }
reqwest = { version = "0.11.9", features = ["blocking"], optional = true }
image = "0.23.14"

[features]
default = ["rom-download"]
rom-download = ["url", "reqwest"]
